samples/_failures_safe/1761619234_d2dbfd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8b66e52b.c: In function ‘main’:
./samples/SAFE/__tmp_8b66e52b.c:182:9: error: expected declaration or statement at end of input
  182 |         fprintf(stderr, "Error reading input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_8b66e52b.c:182:9: error: expected declaration or statement at end of input
